--- a/MitarbeiterVerwaltung.Gui/MitarbeiterVerwaltung.Gui.csproj
+++ b/MitarbeiterVerwaltung.Gui/MitarbeiterVerwaltung.Gui.csproj
@@ -57,6 +57,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="CommunityToolkit.Maui" Version="9.1.1" />
 		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
 		<PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
 		<PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
@@ -65,6 +66,7 @@
 
 	<ItemGroup>
 	  <ProjectReference Include="..\MitarbeiterVerwaltung.Core\MitarbeiterVerwaltung.Core.csproj" />
+	  <ProjectReference Include="..\MitarbeiterVewaltung.Lib\MitarbeiterVewaltung.Lib.csproj" />
 	</ItemGroup>
 
 </Project>
